--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ nav a {
   align-items: center;
   margin-top: 200px;
   gap: 100px;
+  margin-left: 100px;
 }
 
 .theme-1 {
@@ -331,7 +332,7 @@ nav a {
 }
 
 .second-button {
-  margin: 20px 105px;
+  margin: 20px 205px;
 }
 
 .page-3 {
@@ -362,3 +363,126 @@ nav a {
   padding-top: 26vh;
   text-align: center;
 }*/
+
+@media screen and (min-width: 750px) {
+  .button-1,
+  .button-2,
+  .button-3 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .width {
+    max-width: 750px;
+  }
+
+  .main-btn {
+    display: none;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .main-img {
+    margin: 0;
+    width: 250px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 70px;
+  }
+
+  .main-text h2 {
+    margin: 0;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .main-text p {
+    margin: 0;
+    font-size: 25px;
+    width: 90%;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .feature {
+    display: none;
+  }
+
+  .theme-header {
+    font-size: 35px;
+    line-height: 1;
+  }
+
+  .inner-section {
+    display: grid;
+    margin-left: 0;
+  }
+
+  .theme-1 {
+    margin-bottom: -85px;
+  }
+
+  .theme-2 {
+    margin-bottom: 100px;
+  }
+
+  .button-1 {
+    width: 100%;
+    height: 70px;
+    border-radius: 50px;
+    border-style: solid;
+    background-color: #2c123f;
+    color: white;
+    border-color: #441d60;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 100px;
+  }
+
+  .theme-2 {
+    margin-bottom: -85px;
+  }
+
+  .button-2 {
+    width: 100%;
+    height: 70px;
+    border-radius: 50px;
+    border-style: solid;
+    background-color: #2c123f;
+    color: white;
+    border-color: #441d60;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 100px;
+  }
+
+  .theme-3 {
+    margin-bottom: -85px;
+  }
+
+  .button-3 {
+    width: 100%;
+    height: 70px;
+    border-radius: 50px;
+    border-style: solid;
+    background-color: #2c123f;
+    color: white;
+    border-color: #441d60;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 100px;
+  }
+
+  .buttons {
+    display: none;
+  }
+}
