--- a/style.css
+++ b/style.css
@@ -364,7 +364,226 @@ nav a {
   text-align: center;
 }*/
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 1000px) {
+  .main-img {
+    width: 370px;
+    margin-left: 320px;
+    margin-top: -230px;
+  }
+
+  .main-text h2 {
+    margin-top: 30px;
+    font-size: 43px;
+    margin-left: 100px;
+  }
+
+  .main-text p {
+    font-size: 31px;
+    margin-left: 100px;
+  }
+}
+
+@media screen and (min-width: 1050px) {
+  .main-img {
+    margin-left: 350px;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .main-img {
+    margin-left: 400px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-img {
+    margin-left: 450px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .main-img {
+    margin-left: 500px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .main-img {
+    margin-left: 550px;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .main-img {
+    margin-left: 570px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .main-img {
+    width: 500px;
+    margin-left: 700px;
+  }
+
+  .main-text h2 {
+    margin-top: -70px;
+    font-size: 60px;
+    margin-left: 150px;
+  }
+
+  .main-text p {
+    font-size: 40px;
+    margin-left: 150px;
+  }
+
+  .feature {
+    margin-top: -260px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .main-img {
+    width: 350px;
+    margin-left: 325px;
+    margin-top: -250px;
+  }
+
+  .main-text h2 {
+    margin-top: 100px;
+    font-size: 40px;
+    margin-left: 80px;
+  }
+
+  .main-text p {
+    font-size: 30px;
+    margin-left: 80px;
+  }
+
+  .inner-section {
+    gap: 10px;
+    margin-left: 0;
+  }
+
+  .theme-1,
+  .theme-2,
+  .theme-3 {
+    width: 270px;
+  }
+
+  .buttons {
+    gap: 10px;
+    margin-left: 0;
+  }
+
+  .second-button {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .button {
+    padding: 0;
+    width: 275px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .main-img {
+    width: 300px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 100px;
+  }
+
+  .main-text h2 {
+    margin: 0;
+    font-size: 45px;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .main-text p {
+    margin: 0;
+    font-size: 30px;
+    width: 90%;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .feature {
+    display: none;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .inner-section {
+    display: grid;
+    margin-left: 0;
+  }
+
+  .theme-1 {
+    margin-bottom: 10px;
+  }
+  .button-1 {
+    width: 100%;
+    height: 70px;
+    border-radius: 50px;
+    border-style: solid;
+    background-color: #2c123f;
+    color: white;
+    border-color: #441d60;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 150px;
+  }
+
+  .theme-2 {
+    margin-bottom: 10px;
+  }
+
+  .button-2 {
+    width: 100%;
+    height: 70px;
+    border-radius: 50px;
+    border-style: solid;
+    background-color: #2c123f;
+    color: white;
+    border-color: #441d60;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 150px;
+  }
+
+  .theme-3 {
+    margin-bottom: 10px;
+  }
+
+  .button-3 {
+    width: 100%;
+    height: 70px;
+    border-radius: 50px;
+    border-style: solid;
+    background-color: #2c123f;
+    color: white;
+    border-color: #441d60;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 150px;
+  }
+
+  .buttons {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 851px) {
   .button-1,
   .button-2,
   .button-3 {
@@ -425,13 +644,8 @@ nav a {
   }
 
   .theme-1 {
-    margin-bottom: -85px;
+    margin-bottom: 10px;
   }
-
-  .theme-2 {
-    margin-bottom: 100px;
-  }
-
   .button-1 {
     width: 100%;
     height: 70px;
@@ -443,11 +657,11 @@ nav a {
     font-size: 20px;
     text-transform: uppercase;
     cursor: pointer;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
   }
 
   .theme-2 {
-    margin-bottom: -85px;
+    margin-bottom: 10px;
   }
 
   .button-2 {
@@ -461,11 +675,11 @@ nav a {
     font-size: 20px;
     text-transform: uppercase;
     cursor: pointer;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
   }
 
   .theme-3 {
-    margin-bottom: -85px;
+    margin-bottom: 10px;
   }
 
   .button-3 {
@@ -479,10 +693,13 @@ nav a {
     font-size: 20px;
     text-transform: uppercase;
     cursor: pointer;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
   }
 
   .buttons {
     display: none;
   }
+}
+
+@media screen and (max-width: 380px) {
 }
